@@ -35,7 +35,8 @@ Allow magnify sprites on View Sprites
 Added Sphere Meter Type to View Sensors
 Improve compilation: settings --enable-memptr --enable-visualmem --enable-cpustats are enabled by default on ./configure
 Improved Inves Spectrum+ emulation: alert when a game may crash due to the Inves write-on-interrupt bug
-Improve Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)
+Improved Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)
+Improved ZSF snapshot: save Datagear DMA state
 Allow saving .Z80 TC2048, TC2068, TS2068 snapshots. Allow loading .Z80 TC2048, TC2068 snapshots
 
 Improved Hilow Datadrive emulation:
